--- a/Productos.html
+++ b/Productos.html
@@ -61,7 +61,7 @@
         <div class="shop"> <!--ME MARCA "WARNING" EN EL VALIDATOR-->
 
             <!-- Primer producto -->
-            <div class="elemento-container">
+            <div class="elemento-container plants">
                 <img src="./rsc/plants/sunflower.jpg" alt="" class="elemento-img">
                 <div class="elemento-detalle">
                     <p class="elemento-nombre">Producto 1</p>
@@ -74,7 +74,7 @@
             </div>
 
             <!---Segundo producto-->
-            <div class="elemento-container">
+            <div class="elemento-container plants">
                 <img src="./rsc/plants/sunflower.jpg" alt="" class="elemento-img">
                 <div class="elemento-detalle">
                     <p class="elemento-nombre">Producto 1</p>
@@ -87,7 +87,7 @@
             </div>
 
             <!--Tercer producto-->
-            <div class="elemento-container">
+            <div class="elemento-container plants">
                 <img src="./rsc/plants/sunflower.jpg" alt="" class="elemento-img">
                 <div class="elemento-detalle">
                     <p class="elemento-nombre">Producto 1</p>
@@ -100,7 +100,7 @@
             </div>
 
             <!--Cuarto procucto-->
-            <div class="elemento-container">
+            <div class="elemento-container plants">
                 <img src="./rsc/plants/sunflower.jpg" alt="" class="elemento-img">
                 <div class="elemento-detalle">
                     <p class="elemento-nombre">Producto 1</p>
@@ -116,7 +116,7 @@
 
         <div class="shop">
             <!--Quinto producto -->
-            <div class="elemento-container">
+            <div class="elemento-container plants">
                 <img src="./rsc/plants/sunflower.jpg" alt="" class="elemento-img">
                 <div class="elemento-detalle">
                     <p class="elemento-nombre">Producto 2</p>
@@ -128,7 +128,7 @@
                 </div>
             </div>
             <!--Sexto Procucto-->
-            <div class="elemento-container">
+            <div class="elemento-container plants">
                 <img src="./rsc/plants/sunflower.jpg" alt="" class="elemento-img">
                 <div class="elemento-detalle">
                     <p class="elemento-nombre">Producto 2</p>
@@ -140,7 +140,7 @@
                 </div>
             </div>
             <!--Septimo producto-->
-            <div class="elemento-container">
+            <div class="elemento-container plants">
                 <img src="./rsc/plants/sunflower.jpg" alt="" class="elemento-img">
                 <div class="elemento-detalle">
                     <p class="elemento-nombre">Producto 2</p>
@@ -152,7 +152,7 @@
                 </div>
             </div>
             <!--Octavo producto-->
-            <div class="elemento-container">
+            <div class="elemento-container plants">
                 <img src="./rsc/plants/sunflower.jpg" alt="" class="elemento-img">
                 <div class="elemento-detalle">
                     <p class="elemento-nombre">Producto 2</p>
@@ -164,6 +164,63 @@
                 </div>
             </div>
         </div>
+
+        <div class="shop">
+            <!-- Primer elemento -->
+            <div class="elemento-container tools">
+                <img src="./rsc/tools/kit1.jpg" alt="" class="elemento-img">
+                <div class="elemento-detalle">
+                    <p class="elemento-nombre">Kit 1</p>
+                    <p class="elemento-precio"> Precio $999.999</p>                    
+                    <p class="elemento-descripcion">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                        Odit eos, saepe fugit, porro consequatur ad modi excepturi sit, cupiditate perspiciatis tenetur. 
+                        Libero labore mollitia inventore.</p>
+                    
+                    <p class="animate__animated animate__pulse elemento-oferta">OFERTA! <br>EN CUOTAS!</p>
+                </div>
+            </div>
+
+            <!-- Segundo elemento -->
+            <div class="elemento-container tools">
+                <img src="./rsc/tools/kit1.jpg" alt="" class="elemento-img">
+                <div class="elemento-detalle">
+                    <p class="elemento-nombre">Kit 1</p>
+                    <p class="elemento-precio"> Precio $999.999</p>                    
+                    <p class="elemento-descripcion">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                    Odit eos, saepe fugit, porro consequatur ad modi excepturi sit, cupiditate perspiciatis tenetur. 
+                    Libero labore mollitia inventore.</p>
+                    <p class="animate__animated animate__pulse elemento-oferta">OFERTA!</p>
+                </div>
+            </div>
+
+            <!-- Tercer elemento -->
+            <div class="elemento-container tools">
+                <img src="./rsc/tools/kit1.jpg" alt="" class="elemento-img">
+                <div class="elemento-detalle">
+                    <p class="elemento-nombre">Kit 1</p>
+                    <p class="elemento-precio"> Precio $999.999</p>
+                    <p class="elemento-descripcion">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                        Odit eos, saepe fugit, porro consequatur ad modi excepturi sit, cupiditate perspiciatis tenetur. 
+                        Libero labore mollitia inventore.</p>
+                        <p class="animate__animated animate__pulse elemento-oferta">OFERTA!<br>EN EFECTIVO!</p>
+                </div>
+            </div>
+
+            <!-- Cuatro elemento -->
+            <div class="elemento-container tools">
+                <img src="./rsc/tools/kit1.jpg" alt="" class="elemento-img">
+                <div class="elemento-detalle">
+                    <p class="elemento-nombre">Kit 1</p>
+                    <p class="elemento-precio"> Precio $999.999</p>
+                    <p class="elemento-descripcion">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                        Odit eos, saepe fugit, porro consequatur ad modi excepturi sit, cupiditate perspiciatis tenetur. 
+                        Libero labore mollitia inventore.</p>
+                        <p class="animate__animated animate__pulse elemento-oferta">OFERTA!</p>
+                </div>
+            </div>
+        </div>
+
+        
     </main>
 
     <!--  -->
