--- a/index.html
+++ b/index.html
@@ -66,42 +66,55 @@
         <div class="container-text"><h2 class="texto">Algunas de nuestras ofertas</h2></div>
         <div class="shop">
             <!-- Primer elemento -->
-            <div class="elemento-container">
+            <div class="elemento-container tools">
                 <img src="./rsc/tools/kit1.jpg" alt="" class="elemento-img">
                 <div class="elemento-detalle">
                     <p class="elemento-nombre">Kit 1</p>
-                    <p class="elemento-precio"> Precio $999.999</p>
+                    <p class="elemento-precio"> Precio $999.999</p>                    
+                    <p class="elemento-descripcion">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                        Odit eos, saepe fugit, porro consequatur ad modi excepturi sit, cupiditate perspiciatis tenetur. 
+                        Libero labore mollitia inventore.</p>
+                    
                     <p class="animate__animated animate__pulse elemento-oferta">OFERTA! <br>EN CUOTAS!</p>
                 </div>
             </div>
 
             <!-- Segundo elemento -->
-            <div class="elemento-container">
+            <div class="elemento-container tools">
                 <img src="./rsc/tools/kit1.jpg" alt="" class="elemento-img">
                 <div class="elemento-detalle">
                     <p class="elemento-nombre">Kit 1</p>
-                    <p class="elemento-precio"> Precio $999.999</p>
+                    <p class="elemento-precio"> Precio $999.999</p>                    
+                    <p class="elemento-descripcion">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                    Odit eos, saepe fugit, porro consequatur ad modi excepturi sit, cupiditate perspiciatis tenetur. 
+                    Libero labore mollitia inventore.</p>
                     <p class="animate__animated animate__pulse elemento-oferta">OFERTA!</p>
                 </div>
             </div>
 
             <!-- Tercer elemento -->
-            <div class="elemento-container">
+            <div class="elemento-container tools">
                 <img src="./rsc/tools/kit1.jpg" alt="" class="elemento-img">
                 <div class="elemento-detalle">
                     <p class="elemento-nombre">Kit 1</p>
                     <p class="elemento-precio"> Precio $999.999</p>
-                    <p class="animate__animated animate__pulse elemento-oferta">OFERTA!<br>EN EFECTIVO!</p>
+                    <p class="elemento-descripcion">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                        Odit eos, saepe fugit, porro consequatur ad modi excepturi sit, cupiditate perspiciatis tenetur. 
+                        Libero labore mollitia inventore.</p>
+                        <p class="animate__animated animate__pulse elemento-oferta">OFERTA!<br>EN EFECTIVO!</p>
                 </div>
             </div>
 
             <!-- Cuatro elemento -->
-            <div class="elemento-container">
+            <div class="elemento-container tools">
                 <img src="./rsc/tools/kit1.jpg" alt="" class="elemento-img">
                 <div class="elemento-detalle">
                     <p class="elemento-nombre">Kit 1</p>
                     <p class="elemento-precio"> Precio $999.999</p>
-                    <p class="animate__animated animate__pulse elemento-oferta">OFERTA!</p>
+                    <p class="elemento-descripcion">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                        Odit eos, saepe fugit, porro consequatur ad modi excepturi sit, cupiditate perspiciatis tenetur. 
+                        Libero labore mollitia inventore.</p>
+                        <p class="animate__animated animate__pulse elemento-oferta">OFERTA!</p>
                 </div>
             </div>
         </div>
