--- a/index.html
+++ b/index.html
@@ -51,30 +51,49 @@
                 <br>
                 <h1>¡Tenemos de todo para tu jardín!</h1>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum explicabo non sint autem quasi
-                temporibus?
-                Ad id fugiat ullam iure, accusantium aspernatur nesciunt sint voluptas tempora animi odit quos
-                blanditiis.
-                Consequatur vel obcaecati repudiandae, deserunt fugiat modi expedita magni vitae, a magnam nemo
-                laboriosam,
-                voluptatibus commodi ipsum officia eos doloribus placeat velit ab itaque quos. Dignissimos magni nihil
-                iste
-                provident?</p>
+                    temporibus?
+                    Ad id fugiat ullam iure, accusantium aspernatur nesciunt sint voluptas tempora animi odit quos
+                    blanditiis.
+                    Consequatur vel obcaecati repudiandae, deserunt fugiat modi expedita magni vitae, a magnam nemo
+                    laboriosam,
+                    voluptatibus commodi ipsum officia eos doloribus placeat velit ab itaque quos. Dignissimos magni
+                    nihil
+                    iste
+                    provident?</p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum explicabo non sint autem quasi
+                    temporibus?
+                    Ad id fugiat ullam iure, accusantium aspernatur nesciunt sint voluptas tempora animi odit quos
+                    blanditiis.
+                    Consequatur vel obcaecati repudiandae, deserunt fugiat modi expedita magni vitae, a magnam nemo
+                    laboriosam,
+                    voluptatibus commodi ipsum officia eos doloribus placeat velit ab itaque quos. Dignissimos magni
+                    nihil
+                    iste
+                    provident?</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla provident dolor veniam vel, at iure
+                    excepturi quos, aliquid adipisci facilis inventore, cupiditate fugiat voluptatem accusantium enim
+                    eaque qui? In, soluta!
+                    Earum consequuntur nesciunt fugiat suscipit, velit quas impedit. Quidem, at placeat ipsum velit,
+                    dignissimos in amet dolores rerum rem distinctio soluta sed illo accusantium ea deserunt quae
+                    sapiente, eum nam.</p>
             </div>
         </section>
         <!-- Seccion para shop -->
 
-        <div class="container-text"><h2 class="texto">Algunas de nuestras ofertas</h2></div>
+        <div class="container-text">
+            <h2 class="texto">Algunas de nuestras ofertas</h2>
+        </div>
         <div class="shop">
             <!-- Primer elemento -->
             <div class="elemento-container tools">
                 <img src="./rsc/tools/kit1.jpg" alt="" class="elemento-img">
                 <div class="elemento-detalle">
                     <p class="elemento-nombre">Kit 1</p>
-                    <p class="elemento-precio"> Precio $999.999</p>                    
+                    <p class="elemento-precio"> Precio $999.999</p>
                     <p class="elemento-descripcion">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                        Odit eos, saepe fugit, porro consequatur ad modi excepturi sit, cupiditate perspiciatis tenetur. 
+                        Odit eos, saepe fugit, porro consequatur ad modi excepturi sit, cupiditate perspiciatis tenetur.
                         Libero labore mollitia inventore.</p>
-                    
+
                     <p class="animate__animated animate__pulse elemento-oferta">OFERTA! <br>EN CUOTAS!</p>
                 </div>
             </div>
@@ -84,10 +103,10 @@
                 <img src="./rsc/tools/kit1.jpg" alt="" class="elemento-img">
                 <div class="elemento-detalle">
                     <p class="elemento-nombre">Kit 1</p>
-                    <p class="elemento-precio"> Precio $999.999</p>                    
+                    <p class="elemento-precio"> Precio $999.999</p>
                     <p class="elemento-descripcion">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                    Odit eos, saepe fugit, porro consequatur ad modi excepturi sit, cupiditate perspiciatis tenetur. 
-                    Libero labore mollitia inventore.</p>
+                        Odit eos, saepe fugit, porro consequatur ad modi excepturi sit, cupiditate perspiciatis tenetur.
+                        Libero labore mollitia inventore.</p>
                     <p class="animate__animated animate__pulse elemento-oferta">OFERTA!</p>
                 </div>
             </div>
@@ -99,9 +118,9 @@
                     <p class="elemento-nombre">Kit 1</p>
                     <p class="elemento-precio"> Precio $999.999</p>
                     <p class="elemento-descripcion">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                        Odit eos, saepe fugit, porro consequatur ad modi excepturi sit, cupiditate perspiciatis tenetur. 
+                        Odit eos, saepe fugit, porro consequatur ad modi excepturi sit, cupiditate perspiciatis tenetur.
                         Libero labore mollitia inventore.</p>
-                        <p class="animate__animated animate__pulse elemento-oferta">OFERTA!<br>EN EFECTIVO!</p>
+                    <p class="animate__animated animate__pulse elemento-oferta">OFERTA!<br>EN EFECTIVO!</p>
                 </div>
             </div>
 
@@ -112,9 +131,9 @@
                     <p class="elemento-nombre">Kit 1</p>
                     <p class="elemento-precio"> Precio $999.999</p>
                     <p class="elemento-descripcion">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                        Odit eos, saepe fugit, porro consequatur ad modi excepturi sit, cupiditate perspiciatis tenetur. 
+                        Odit eos, saepe fugit, porro consequatur ad modi excepturi sit, cupiditate perspiciatis tenetur.
                         Libero labore mollitia inventore.</p>
-                        <p class="animate__animated animate__pulse elemento-oferta">OFERTA!</p>
+                    <p class="animate__animated animate__pulse elemento-oferta">OFERTA!</p>
                 </div>
             </div>
         </div>
