--- a/register.html
+++ b/register.html
@@ -77,10 +77,10 @@
                     </div>
 
                     <!-- Grupo email -->
-                    <div class="formulario__grupo" id="grupo__email">
+                    <div class="formulario__grupo" id="grupo__correo">
                         <label for="correo" class="formulario__label">e-Mail</label>
                         <div class="formulario__grupo-input">
-                            <input type="email" class="formulario__input" name="email" id="email"
+                            <input type="email" class="formulario__input" name="correo" id="correo"
                                 placeholder="ejemplo@dominio.com">
                             <i class="formulario__validacion-estado fa-solid fa-circle-xmark"></i>
                         </div>
