--- a/register.html
+++ b/register.html
@@ -78,7 +78,7 @@
 
                     <!-- Grupo email -->
                     <div class="formulario__grupo" id="grupo__correo">
-                        <label for="correo" class="formulario__label">e-Mail</label>
+                        <label for="correo" class="formulario__label">E-mail</label>
                         <div class="formulario__grupo-input">
                             <input type="email" class="formulario__input" name="correo" id="correo"
                                 placeholder="ejemplo@dominio.com">
