--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
     <!-- Acá va el contenido de nuestra web -->
 
     <main class="main">
-        <div class="container text-center">
+        <div id="container_form">
             <div class="row">
                 <div class="col">
                     <div id="cuadrito">
@@ -65,7 +65,7 @@
                             </div>
                             <div class="contenedor_input">
                                 <label for="mail">Correo:</label>
-                                <input type="email" id="mail" placeholder="example@example.com">
+                                <input type="email" id="mail" placeholder="ejemplo@dominio.com">
                             </div>
 
                             <div class="contenedor_input">
@@ -79,7 +79,7 @@
                             </div>
                             <div id="textarea">
                                 <label>Déjanos un mensaje:</label>
-                                <textarea name="mensaje" cols="30" rows="10" placeholder="Mensaje..."></textarea>
+                                <textarea name="mensaje" cols="48" rows="15" placeholder="Mensaje..."></textarea>
 
                             </div>
                             <div class="contenedor_aceptar">
@@ -87,6 +87,20 @@
                                     productos:</label>
                                 <input type="checkbox" id="checkbox" name="checkbox">
 
+                                <div class="col">
+
+                                    <div class="subtitulo">
+                                        <h2 class="subtitulos">Nuestra Ubicación</h2>
+                                    </div>
+                                    <div class="mapa">
+                                        <iframe
+                                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3277.4178119636626!2d-58.54653700000001!3d-34.7702557!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccff16e02d8b1%3A0x1d8fe58732bf68e7!2sBosques%20De%20Ezeiza!5e0!3m2!1ses!2sar!4v1712670835735!5m2!1ses!2sar"
+                                            allowfullscreen="" loading="lazy"
+                                            referrerpolicy="no-referrer-when-downgrade">
+                                        </iframe>
+                                    </div>
+
+                                </div>
                             </div>
                             <div class="container_button">
                                 <button type="submit">Enviar</button>
@@ -96,19 +110,7 @@
 
                     </div>
                 </div>
-                <div class="col">
 
-                    <div class="subtitulo">
-                        <h2 class="subtitulos">Nuestra Ubicación</h2>
-                    </div>
-                    <div class="mapa">
-                        <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3277.4178119636626!2d-58.54653700000001!3d-34.7702557!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccff16e02d8b1%3A0x1d8fe58732bf68e7!2sBosques%20De%20Ezeiza!5e0!3m2!1ses!2sar!4v1712670835735!5m2!1ses!2sar"
-                            allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
-                        </iframe>
-                    </div>
-
-                </div>
 
             </div>
 
