--- a/register.html
+++ b/register.html
@@ -57,8 +57,8 @@
                     <!-- Grupo nombre -->
                     <div class="formulario__grupo" id="grupo__nombre">
                         <label for="nombre" class="formulario__label">Nombre</label>
-                        <div class="formulario__grupo-input">
-                            <input type="text" class="formulario__input" name="nombre" id="nombre" placeholder="Nombre">
+                        <div class="formulario__grupo-input" >
+                            <input type="text" class="formulario__input" name="nombre" id="nombre" placeholder="Nombre" required>
                             <i class="formulario__validacion-estado fa-solid fa-circle-xmark"></i>
                         </div>
                         <p class="formulario__input-error"> El nombre no puede contener números o símbolos. </p>
@@ -70,7 +70,7 @@
                         <label for="apellido" class="formulario__label">Apellido</label>
                         <div class="formulario__grupo-input">
                             <input type="text" class="formulario__input" name="apellido" id="apellido"
-                                placeholder="Apellido">
+                                placeholder="Apellido" required>
                             <i class="formulario__validacion-estado fa-solid fa-circle-xmark"></i>
                         </div>
                         <p class="formulario__input-error"> El apellido no puede contener números o símbolos. </p>
@@ -81,7 +81,7 @@
                         <label for="correo" class="formulario__label">E-mail</label>
                         <div class="formulario__grupo-input">
                             <input type="email" class="formulario__input" name="correo" id="correo"
-                                placeholder="ejemplo@dominio.com">
+                                placeholder="ejemplo@dominio.com" required>
                             <i class="formulario__validacion-estado fa-solid fa-circle-xmark"></i>
                         </div>
                         <p class="formulario__input-error"> El correo solo admite letras, números y guiones. </p>
@@ -91,7 +91,7 @@
                     <div class="formulario__grupo" id="grupo__password">
                         <label for="password" class="formulario__label">Contraseña</label>
                         <div class="formulario__grupo-input">
-                            <input type="password" class="formulario__input" name="password" id="password">
+                            <input type="password" class="formulario__input" name="password" id="password" required>
                             <i class="formulario__validacion-estado fa-solid fa-circle-xmark"></i>
                         </div>
                         <p class="formulario__input-error"> La contraseña debe tener de 4 a 12 dígitos. </p>
@@ -101,7 +101,7 @@
                     <div class="formulario__grupo" id="grupo__password2">
                         <label for="password2" class="formulario__label">Repetir contraseña</label>
                         <div class="formulario__grupo-input">
-                            <input type="password" class="formulario__input" name="password2" id="password2">
+                            <input type="password" class="formulario__input" name="password2" id="password2" required>
                             <i class="formulario__validacion-estado fa-solid fa-circle-xmark"></i>
                         </div>
                         <p class="formulario__input-error"> Ambas contraseñas deben ser iguales. </p>
