--- a/register.html
+++ b/register.html
@@ -119,7 +119,7 @@
 
                     <!-- Otros grupos -->
 
-                    <!-- <div class="contenedor_input">
+                    <div class="contenedor_input">
                         <label>Fecha de Nacimiento:</label>
                         <input class="formula" type="date" id="birthdate" name="birthdate">
                     </div>
@@ -130,7 +130,7 @@
                             <option>Masculino</option>
                             <option>Otro</option>
                         </select>
-                    </div> -->
+                    </div>
 
                     <!-- Grupo formulario -->
                     <div class="formulario__grupo" id="grupo__terminos">
