--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <p class="animate__animated animate__pulse elemento-oferta">OFERTA!<br>EN EFECTIVO!</p>
                 </div>
             </div>
-
+            <!-- Comentario para GitHub -->
             <!-- Cuatro elemento -->
             <div class="elemento-container tools">
                 <img src="./rsc/tools/kit1.jpg" alt="" class="elemento-img">
